--- a/package.json
+++ b/package.json
@@ -44,13 +44,16 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
     "styled-components": "^4.4.1",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-select": "^3.0.8",
     "@types/styled-components": "^4.4.1"
   }
 }
