--- a/package.json
+++ b/package.json
@@ -53,20 +53,21 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^1.11.2",
-    "@graphql-codegen/cli": "^1.11.2",
-    "@graphql-codegen/fragment-matcher": "^1.11.2",
-    "@graphql-codegen/import-types-preset": "^1.11.2",
-    "@graphql-codegen/introspection": "^1.11.2",
-    "@graphql-codegen/near-operation-file-preset": "^1.11.2",
-    "@graphql-codegen/typescript": "^1.11.2",
-    "@graphql-codegen/typescript-operations": "^1.11.2",
-    "@graphql-codegen/typescript-react-apollo": "^1.11.2",
+    "@graphql-codegen/add": "^1.17.0",
+    "@graphql-codegen/cli": "^1.17.0",
+    "@graphql-codegen/fragment-matcher": "^1.17.0",
+    "@graphql-codegen/import-types-preset": "^1.17.0",
+    "@graphql-codegen/introspection": "^1.17.0",
+    "@graphql-codegen/near-operation-file-preset": "^1.17.0",
+    "@graphql-codegen/typescript": "^1.17.0",
+    "@graphql-codegen/typescript-operations": "^1.17.0",
+    "@graphql-codegen/typescript-react-apollo": "^1.17.0",
     "@types/nprogress": "^0.2.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.8",
-    "@types/styled-components": "^4.4.1"
+    "@types/styled-components": "^4.4.1",
+    "prettier": "^2.0.5"
   }
 }
